include_directories(${CMAKE_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)

add_executable(kprobe kprobe.cc)
target_link_libraries(kprobe dw_bcc-static)
target_link_libraries(kprobe elf)
target_link_libraries(kprobe unwind-x86_64)
target_link_libraries(kprobe unwind)
target_link_libraries(kprobe pthread)
target_link_libraries(kprobe bcc)

add_executable(uprobe uprobe.cc)
target_link_libraries(uprobe dw_bcc-static)
target_link_libraries(uprobe elf)
target_link_libraries(uprobe unwind-x86_64)
target_link_libraries(uprobe unwind)
target_link_libraries(uprobe pthread)
target_link_libraries(uprobe bcc)
