include_directories(${CMAKE_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

if (CMAKE_VERSION VERSION_LESS "3.1")
  if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set (CMAKE_CXX_FLAGS "-std=gnu++11 ${CMAKE_CXX_FLAGS}")
  endif ()
else ()
  set(CMAKE_CXX_STANDARD_REQUIRED ON)
  set(CMAKE_CXX_STANDARD 11)
endif ()

add_executable(syscall syscall.cc)
target_link_libraries(syscall dw_bcc-static)
target_link_libraries(syscall elf)
target_link_libraries(syscall unwind-x86_64)
target_link_libraries(syscall unwind)
target_link_libraries(syscall pthread)
target_link_libraries(syscall bcc)

add_executable(uprobe uprobe.cc)
target_link_libraries(uprobe dw_bcc-static)
target_link_libraries(uprobe elf)
target_link_libraries(uprobe unwind-x86_64)
target_link_libraries(uprobe unwind)
target_link_libraries(uprobe pthread)
target_link_libraries(uprobe bcc)
